fix loi chat.js khong nhan user

--- a/webchat1Client/home.html
+++ b/webchat1Client/home.html
@@ -13,7 +13,13 @@
     <title>home</title>
 </head>
 <body>
-   <div class="login-form">
+    <span>Ứng dụng web chat được viết theo mô hình restful api</span><br/>
+    <a href="https://github.com/dttr278/chatservice" style="color:blue">Link github webservice & clien html</a><br/>
+    <a href="https://github.com/dttr278/chatclientwpf" style="color:blue">Link github client c# wpf</a><br/>
+    <span>user: 1 password:1, user:2 password:2</span><br/>
+    <p style="font-weight: bold ;color :darkgreen; font-family: 'Courier New', Courier, monospace"><i>ứng dụng được viết bởi Đỗ Tấn Trung - dttr278@gmail.com</i></p>
+   <p>vì web service chạy trên host heroku free nên tài nguyên(ảnh,file,...) chỉ được lưu tạm thời :3</p>
+    <div class="login-form">
        <div id="login">
            <form id="signin" method="post">
                 <h1 style="text-align: center;">Sign-in</h1>
@@ -80,6 +86,10 @@
                 <label  id="sign-in-link">Sign in</label>
             </form>
         </div>
+   </div>
+   <div>
+       
+      
    </div>
 </body>
 </html>
